--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix --cache"
+    "lint": "eslint . --fix --cache",
+    "format": "prettier --write src/",
+    "prettier:check": "(prettier --check \"src/**/*.{js,vue,css,scss,json,ts,tsx}\" || (echo Prettier formatting issues detected! && exit 1))"
   },
   "dependencies": {
     "pinia": "^3.0.3",
@@ -32,6 +34,7 @@
     "typescript": "~5.9.0",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3",
+    "prettier": "^3.2.5",
     "vue-tsc": "^3.1.1"
   }
 }
